tests/invalid/foreign_include_file_missing.err_exp2
Error: can't open `.\missing_file' for input: No such file or directory
